# DNS-Sinky

./: .gitignore  Cargo.toml  LICENCE  README.md  config.json
src/: config.rs  lists.rs  main.rs  server.rs
