[package]
name = "dns_sinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = "0.8.0"
reqwest = { version = "0.11.20"  }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
flate2 = "1.0.27"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"