[package]
name = "dns_sinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = "0.9.3"
reqwest = { version = "0.11.23"  }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
flate2 = "1.0.28"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"